# mgl

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  Makefile
.github/workflows/: tests.yml
MGL/src/: function_table.cpp  function_table_data.inl
